<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">

	<TextView
		android:textAppearance="?android:textAppearanceMedium"
		android:id="@id/textView1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/player1_label"
		android:layout_alignParentLeft="true"
		android:layout_alignParentTop="true"
		android:layout_alignParentStart="true"
		android:labelFor="@id/editText1" />

	<EditText
		android:id="@id/editText1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="20.0dip"
		android:text="@string/default_name1"
		android:ems="10"
		android:layout_below="@id/textView1"
		android:layout_alignParentLeft="true"
		android:inputType="text"
		android:layout_alignParentStart="true">

		<requestFocus />
	</EditText>

	<CheckBox
		android:id="@id/checkBox1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="20.0dip"
		android:text="@string/ai_controlled"
		android:layout_below="@id/editText1"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true" />

	<TextView
		android:textAppearance="?android:textAppearanceMedium"
		android:id="@id/textView2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="20.0dip"
		android:text="@string/player2_label"
		android:layout_below="@id/checkBox1"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:labelFor="@id/editText2" />

	<EditText
		android:id="@id/editText2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="20.0dip"
		android:text="@string/default_name2"
		android:ems="10"
		android:layout_below="@id/textView2"
		android:layout_alignParentLeft="true"
		android:inputType="text"
		android:layout_alignParentStart="true" />

	<CheckBox
		android:id="@id/checkBox2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="20.0dip"
		android:text="@string/ai_controlled"
		android:layout_below="@id/editText2"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true" />

	<Button
		android:id="@id/button1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/start_new_game"
		android:layout_alignParentLeft="true"
		android:layout_alignParentRight="true"
		android:layout_alignParentBottom="true"
		android:onClick="startNewGame"
		android:layout_alignParentStart="true"
		android:layout_alignParentEnd="true" />
</RelativeLayout>